# TBABM

./: .gitignore  CMakeLists.txt  README.md  graphs.R  scaling.tsv
include/TBABM/: Household.h  HouseholdGen.h  Individual.h  IndividualTypes.h  MasterData.h  Names.h  Names.inc  Pointers.h  SurveyUtils.h  TB.h  TBABM.h  TBTypes.h  household_sketch.txt
params/: .gitignore  gen_params.R  gen_runsheets.sh  outline.txt  prototype.csv  rangefile_example.csv  rangefile_example_larger.csv  rangefile_tweaks.csv  removeJSONs.sh  remove_runsheets.sh  rf_initialization.csv  rf_new_initialization.csv  rf_progression.csv  rs_prototype.csv  sampleParams.csv  sampleParams.json  test_rf.csv  time in marriage.csv  time to first birth.csv  time to looking.csv  time to natural death.csv  updateJSONs.sh
params/Demographic/: probability of pregnant.csv  probability of pregnant.json  time in marriage.json  time to first birth.csv  time to first birth.json  time to looking.csv  time to looking.json  time to natural death bestdata.csv  time to natural death fixed.csv  time to natural death newdata.csv  time to natural death.csv  time to natural death.json  time to subsequent births.csv  time to subsequent births.json
params/HIV/: ART - TB.csv  ART - TB.json  ART - noTB.csv  ART - noTB.json  VCT a_t_i.csv  VCT a_t_i.json  VCT sig_i.csv  VCT sig_i.json  infection risk - nospouse.csv  infection risk - nospouse.json  infection risk - spouse.csv  infection risk - spouse.json  prevalence - 1990.csv  seropositive risk.csv
src/: .gitignore  CMakeLists.txt  CalibrateTBABM  HouseholdGen.cpp  MasterData.cpp  RunTBABM  TBABM.cpp  household_structure.csv  parallel.sbatch  paramTest.cpp  summary_graph.R  summary_statistics.sh  tbabm.sh  tbabm2.sh  test.cpp  valgrind_report.txt
src/Demographic/: event-Birth.cpp  event-ChangeAgeGroup.cpp  event-CreateHousehold.cpp  event-CreatePopulation.cpp  event-Death.cpp  event-Divorce.cpp  event-ExogenousBirth.cpp  event-JoinHousehold.cpp  event-LeaveHousehold.cpp  event-Marriage.cpp  event-Matchmaking.cpp  event-NewHouseholds.cpp  event-Pregnancy.cpp  event-SingleToLooking.cpp  event-Survey.cpp  event-UpdateHouseholds.cpp  event-UpdatePyramid.cpp  helper-InitialEvents.cpp  helper-InitialMortalityCheck.cpp  helper-SurveyUtils.cpp
src/HIV/: event-ARTGuidelineChange.cpp  event-ARTInitiate.cpp  event-HIVInfection.cpp  event-MortalityCheck.cpp  event-VCTDiagnosis.cpp  helper-ARTEligible.cpp  helper-HIVInfectionCheck.cpp
src/Household/: Household.cpp  HouseholdGen.cpp
src/Individual/: IndividualTypes.cpp
src/TB/: TB-inl.h  TB.cpp  TBTypes.cpp  event-InfectInfectious-inl.h  event-InfectLatent-inl.h  event-InfectionRiskEvaluate-inl.h  event-Recovery-inl.h  event-RiskReeval-inl.h  event-TreatmentBegin-inl.h  event-TreatmentComplete-inl.h  event-TreatmentDropout-inl.h  events-Latency-inl.h
src/TBABM.dir/Debug/TBABM.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TBABM.lastbuildstate
src/TBABMTest.dir/Debug/TBABMTest.tlog/: CL.command.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog
tests/: CMakeLists.txt
viz/: get_grids.sh  parallel_render_graphs.sbatch  render_graphs.sh
viz/R/: AIDSstuff.R  graph_catalog.R  graph_templates.R  graphs.R  graphs_HIV.R  graphs_TB.R  graphs_death.R  graphs_general.R  graphs_grid.R  graphs_household.R  graphs_population.R  grid_gen.R  multiplot.R  reformat_thembisa_incidence.R  utils_csv.R  utils_timeseries.R
